@@ -3,7 +3,8 @@ package processing.core;
 import java.io.BufferedReader;
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Hashtable;
+import java.util.HashMap;
+import java.util.Map;
 
 /**
  * This class is not part of the Processing API and should not be used
@@ -161,7 +162,7 @@ public class PShapeOBJ extends PShape {
                                  ArrayList<PVector> coords,
                                  ArrayList<PVector> normals,
                                  ArrayList<PVector> texcoords) {
-    Hashtable<String, Integer> mtlTable  = new Hashtable<String, Integer>();
+    Map<String, Integer> mtlTable  = new HashMap<String, Integer>();
     int mtlIdxCur = -1;
     boolean readv, readvn, readvt;
     try {
@@ -328,7 +329,7 @@ public class PShapeOBJ extends PShape {
   static protected void parseMTL(PApplet parent, String path,
                                  BufferedReader reader,
                                  ArrayList<OBJMaterial> materials,
-                                 Hashtable<String, Integer> materialsHash) {
+                                 Map<String, Integer> materialsHash) {
     try {
       String line;
       OBJMaterial currentMtl = null;
@@ -342,7 +343,7 @@ public class PShapeOBJ extends PShape {
             // Starting new material.
             String mtlname = parts[1];
             currentMtl = new OBJMaterial(mtlname);
-            materialsHash.put(mtlname, new Integer(materials.size()));
+            materialsHash.put(mtlname, Integer.valueOf(materials.size()));
             materials.add(currentMtl);
           } else if (parts[0].equals("map_Kd") && parts.length > 1) {
             // Loading texture map.
